Add sacks (excluding rune sack)

--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -999,7 +999,7 @@ twitterDescription += '. Click to view more stats!'
                                 <div class="inventory-tabs-container">
                                     <div class="inventory-tab active-inventory" data-inventory-type="inventory">
                                         <div class="inventory-tab-icon item-icon icon-54_0"></div>
-                                        <div class="inventory-tab-name">Inventory</div>
+                                        <div class="inventory-tab-name">Inv</div>
                                     </div>
                                     <%
 
@@ -1020,14 +1020,14 @@ twitterDescription += '. Click to view more stats!'
                                     if(items.potion_bag.length > 0){ %>
                                         <div class="inventory-tab" data-inventory-type="potion_bag">
                                             <div class="inventory-tab-icon item-icon custom-icon" style="background-image: url(/head/9f8b82427b260d0a61e6483fc3b2c35a585851e08a9a9df372548b4168cc817c)"></div>
-                                            <div class="inventory-tab-name">Potions</div>
+                                            <div class="inventory-tab-name">Pots</div>
                                         </div>
                                     <% }
 
                                     if(items.fishing_bag.length > 0){ %>
                                         <div class="inventory-tab" data-inventory-type="fishing_bag">
                                             <div class="inventory-tab-icon item-icon custom-icon" style="background-image: url(/head/eb8e297df6b8dffcf135dba84ec792d420ad8ecb458d144288572a84603b1631)"></div>
-                                            <div class="inventory-tab-name">Fishies</div>
+                                            <div class="inventory-tab-name">Fish</div>
                                         </div>
                                     <% }
 
@@ -1035,6 +1035,13 @@ twitterDescription += '. Click to view more stats!'
                                         <div class="inventory-tab" data-inventory-type="quiver">
                                             <div class="inventory-tab-icon item-icon custom-icon" style="background-image: url(/head/4cb3acdc11ca747bf710e59f4c8e9b3d949fdd364c6869831ca878f0763d1787)"></div>
                                             <div class="inventory-tab-name">Quiver</div>
+                                        </div>
+                                    <% }
+
+                                    if(items.sacks.length > 0){ %>
+                                        <div class="inventory-tab" data-inventory-type="sacks">
+                                            <div class="inventory-tab-icon item-icon custom-icon" style="background-image: url(/head/fb49a2cb90737993201fe72a1f1ab75c5c93c28f047f685ffad5ab20c7b0caf0)"></div>
+                                            <div class="inventory-tab-name">Sacks</div>
                                         </div>
                                     <% } %>
                                 </div>
