--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -654,9 +654,9 @@ twitterDescription += '. Click to view more stats!'
                     <% if('levels' in calculated){ %>
                         <div class="additional-stat"><span data-tippy-content="
                         <span class='stat-name'>Total Skill XP: </span><span class='stat-value'><%= Math.round(calculated.total_skill_xp).toLocaleString() %></span>
-                        <div class='tippy-explanation'>Total XP gained in all skills except Carpentry and Runecrafting.</div>
+                        <div class='tippy-explanation'>Total XP gained in all skills except Runecrafting.</div>
                         <span class='stat-name'>Average Level: </span><span class='stat-value'><%= (Math.floor(calculated.average_level * 100) / 100).toFixed(2) %></span>
-                        <div class='tippy-explanation'>Average skill level over all skills except Carpentry and Runecrafting<% if('runecrafting' in calculated.levels){ %>, includes progress to next level<% } %>.</div>
+                        <div class='tippy-explanation'>Average skill level over all skills except Runecrafting<% if('runecrafting' in calculated.levels){ %>, includes progress to next level<% } %>.</div>
                         <% if('runecrafting' in calculated.levels){ %><span class='stat-name'>Average Level without progress: </span><span class='stat-value'><%= (Math.floor(calculated.average_level_no_progress * 100) / 100).toFixed(2) %></span>
                         <div class='tippy-explanation'>Average skill level without including partial level progress.</div><% } %>
                         "><span class="stat-name">Average Skill Level: </span><span class="stat-value"><%= Math.floor(calculated.average_level * 100) / 100 %></span></span></div>
